k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-facturacion-service
spec:
  selector:
    app: frontend-facturacion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
