k8s/ingress.yaml
# Aun no funciona este
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-facturacion-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx" # ojo aqui pq debe coincidir con el controlador de ingress que se esta usando
spec:
#OJO: falta configurar DNS y el TSL para https (luego de configurar este, se agrega abajo)
  rules:
    - host: tssw.cl
      http:
        paths:
          - path: /facturacion # OJO: este path debe ser modificado luego de configurar el DNS
            pathType: Prefix
            backend:
              service:
                name: front-facturacion-service
                port:
                  number: 80
